--- a/index.html
+++ b/index.html
@@ -19,14 +19,25 @@
 
       <div class="summary" role="article">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. This page collects interactive and
-          static visualizations to help interpret long-run changes in U.S. household finances. Each section
-          includes a short narrative (placeholder text for now).
+          A huge issue in today’s ecosystem is the idea of affordability in the U.S. Over the past couple of years, the U.S. has been going through an affordability crisis. The average household has been struggling due to increasing prices of essential needs. We want to paint a picture of how much money the average American family earns and where that money goes, as well as how these quantities have changed over time. With discussions of an affordability crisis in the U.S., it is incredibly important to gain a full understanding of where the pain points are and to what degree the average American family is “stretched-thin”.
+        </p>
+        <p>
+          For our project we wanted to use these questions as a baseline for our research: What is the thing that is contributing most to this affordability crisis? Can the average US citizen make enough income to provide for themselves and their families in this day and age? Has affordability always been rough in the past and are we overreacting?
+        </p>
+        <p>
+          With that in mind, our project is broken into three distinct sections:
+        <p>
+          How have essential goods such as food and housing prices changed over time?
+          How have wages changed over time?
+          What seems to be the root cause of the affordability crisis? (What costs the most, what do we spend the most on, do we get paid enough to afford essentials?)
+        </p>
+        <p>
+          Each one of these sections addresses how we’ll determine the answer to each of our guiding questions, and how we define the current and past states of U.S. affordability.
         </p>
       </div>
 
       <div class="preamble" role="article">
-        <h3>How to use this page</h3>
+        <h3>How to use this page:</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Use the sidebar to jump between
           sections. For interactive charts, hover for details and use the controls to change the year or play
@@ -38,7 +49,7 @@
     <main class="main supporting" id="content" role="main">
 
       <section class="viz-section" id="sankey">
-        <h3>Where the median household income goes</h3>
+        <h3>Where the median household income goes:</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. In this visualization, the left bar represents
           median household income and the flows show estimated spending by category in the selected year.
@@ -76,8 +87,7 @@
       <section class="viz-section" id="food-cpi">
         <h3>Grocery prices over time</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. This chart tracks the grocery CPI index over time,
-          highlighting how the level (not just the annual rate) has changed across decades.
+          This line chart displays the average CPI values per year sourced from the US Bureau of Labor Statistics from 1952 to 2025. Every decade is marked with a more distinguishable marker and its value in order to better make out the values due to the 70+ years it covers. CPI, an acronym for the Consumer Price Index, is the measure of the average change over time of prices of goods/services by urban consumers. The formula is calculated by the cost of the market basket in the current period, over the cost of the market basket in the base period, times 100. So the graph here depicts a steady increase in the average price of groceries for a typical US family. As of the current year, the CPI of groceries stands at approximately 312 which is around triple the base period’s level: the highest it has ever been in the past 70+ years. While this does look very bad, it is important to note that CPI isn’t the greatest when it comes to measuring change in price over time due to the multitude of factors that it uses to track CPI and the multitude of factors that it leaves out when tracking CPI. So why was this included you may be asking? CPI is important to seeing the general inflation trend over the years, in which we can see a broad general increase in the amount consumers have to pay for food.
         </p>
         <div class="viz-embed">
           <img src="FoodCPI.png" alt="Yearly Average Grocery CPI (1952-2025)">
@@ -88,8 +98,7 @@
       <section class="viz-section" id="inflation">
         <h3>Inflation: annual rates and seasonal patterns</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. The top panel summarizes annual inflation rates
-          (relative to a 2% target line) and the bottom panel shows average monthly inflation patterns across years.
+          In terms of the actual year by year inflation rate of food prices, the line chart at the top provides a different looking story than the CPI graph. As shown on the graph, the ideal annual inflation rate should be around 2%, but this chart is all over the place. There are so many jumps and drops, yet it does seem to follow a downwards trend. While very small, the noticeable downwards trend does give a bit of hope that food prices are getting better as the years go by. However, while some spikes in food prices are predictable like our friend Covid-19 mentioned in the last graph, there are a lot of random jumps up and down. There are two things for certain though. One, is that we have never had a higher inflation spike in food since the 1970s and two, is that the 2000’s do contain our lowest inflation rates which is hopeful news for upcoming years. As for the bar graph at the bottom, it does look a bit boring but tells us a lot about the inflation of our food on a yearly basis. As one may know, the US imports most of its food from other countries, as most food does not grow all year around. The good news that this bar graph shows, is that there isn’t a real significant inflation hike or drop at any time during the year. The monthly data depicts that the average inflation rate stays around 4% every month, meaning that time of year does not affect the inflation rate of food, only the events of the year as a whole affect it.
         </p>
         <div class="viz-embed">
           <img src="HouseholdGroceryInflation.png" alt="Annual Average Inflation Rate and Average Monthly Inflation (1968-2025)">
@@ -114,7 +123,7 @@
       </section>
 
       <section class="viz-section" id="methods">
-        <h3>Methods and data notes</h3>
+        <h3>Conclusions</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Add notes here about data sources, definitions
           (nominal vs real dollars, CPI adjustments), and any category-mapping assumptions used to construct the
