--- a/index.html
+++ b/index.html
@@ -108,7 +108,27 @@
 
       <section class="viz-section" id="tableau-dashboard">
         <h3>Average annual salary by wage group (Tableau)</h3>
-        <p>Lorem ipsum…</p>
+        <p>
+          This visualization shows average annual salaries for different wage groups from 1951 to 2023,
+          adjusted for inflation. It illustrates a growing divergence in earnings, with most of the growth
+          concentrated among the highest earners. While the salaries for all the wage groups increase to
+          some extent, the top 0.1% far outpaces the rest of the population. From 1951 to 2023, their
+          salaries increased from about $440,000 to nearly $3 million. The bottom 90%, however, only
+          increased from about $19,000 to $43,000.
+        </p>
+        <p>
+          This inequality is further emphasized in the tooltip visualization, which displays each wage
+          group’s share of total salary in a given year. The top 0.1% consistently account for a
+          disproportionate share of total income, and it has grown over time. It increased from about 68%
+          in 1951 to about 78% in 2023. When combined with the 99-99.9% group, the top 1% earn about
+          94% of the total salary. In contrast, the rest of the top 10% earn about 5%, leaving the bottom
+          90% of the population with only about 1% of the total income.
+        </p>
+        <p>
+          These trends illustrate how income gains over time have been heavily skewed toward the highest
+          earners, reinforcing the idea of declining affordability for most people despite overall economic
+          growth.
+        </p>
 
         <div class="viz-embed tableau-embed">
           <iframe
