--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
         <div class="sidebar-box">
           <h4>Notes</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Add dataset links and citations here.</p>
+          <p>Data 303 Final Project, Fall 2026.</p>
         </div>
 
         <a class="back-to-top" href="#top">Back to top</a>
