--- a/index.html
+++ b/index.html
@@ -154,13 +154,50 @@
       <section class="viz-section" id="bibliography">
         <h3>Bibliography</h3>
         <div class="bib-entry">
-          <p>Bureau of Labor Statistics. (2025). <em>Consumer Price Index for All Urban Consumers (CPI-U)</em>. U.S. Department of Labor. https://www.bls.gov/cpi/</p>
-        </div>
-        <div class="bib-entry">
-          <p>Ruggles, S., et al. (2024). <em>IPUMS USA: Version 15.0 [dataset]</em>. Minneapolis, MN: IPUMS. https://doi.org/10.18128/D010.V15.0</p>
-        </div>
-        <div class="bib-entry">
-          <p>U.S. Census Bureau. (2024). <em>Current Population Survey (CPS) Annual Social and Economic Supplement (ASEC)</em>. https://www.census.gov/programs-surveys/cps.html</p>
+          <p><b>
+            Authors: Jim Slone, Brandon Hsu, Dylan Villamizar
+          </b></p>
+          <br>
+          <p><b>
+            Household Expenses (Sankey) & Expense Rankings (Bump Plot):
+          </b></p>
+          <p>
+            United States Census Bureau. (2025). <em>Historical Income Tables: Families, Table F-5. Race and Hispanic Origin of Householder--Families by Median and Mean Income</em>. https://www.census.gov/data/tables/time-series/demo/income-poverty/historical-income-families.html.
+          <p>
+            Bureau of Economic Analysis (2025). <em>National Income and Product Accounts, Table 2.3.5. Personal Consumption Expenditures by Major Type of Product and by Major Function</em>. https://apps.bea.gov/iTable/?reqid=19&step=2&isuri=1&categories=underlying&_gl=1.
+          </p>
+          <br>
+          <p><b>
+            Income Percentiles (Stacked Bar):
+          </b></p>
+          <p>
+            Integrated Public Use Microdata Series - Current Population Survey (IPUMS CPS). (2025). <em>Annual Social and Economic Supplement</em>. https://cps.ipums.org/cps-action/variables/group?id=asec_inc.
+          </p>
+          <br>
+          <p><b>
+            Grocery Prices (Line Plot):
+          </b></p>
+          <p>
+            Federal Reserve Bank of St. Louis. (2025). <em>Consumer Price Index for All Urban Consumers: All Items in U.S. City Average (CPIAUCSL)</em>. https://fred.stlouisfed.org/series/CPIAUCSL
+          </p>
+          <br>
+          <p><b>
+            Inflation Trends (Line & Bar):
+          </b></p>
+          <p>
+            United States Inflation Calculator. (2025). <em>Food Inflation in the United States (1968-2025)</em>. https://www.usinflationcalculator.com/inflation/food-inflation-in-the-united-states/
+          </p>
+          <br>
+          <p><b>
+            Avg. Incomes by Class (Tableau):
+          </b></p>
+          <p>
+            Economic Policy Institute. (2025). <em>State of Working America Data Library, Version 2025.11.13</em>. https://data.epi.org/.
+          </p>
+          <br>
+          <p>
+            All visualizations created using Python (Plotly, Matplotlib) and Tableau.
+          </p>
         </div>
       </section>
 
