--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@
       <section class="viz-section" id="sankey">
         <h3>Where the median household income goes:</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In this visualization, the left bar represents
-          median household income and the flows show estimated spending by category in the selected year.
+          This sankey diagram displays the median family income/household expenses for various goods and services from 1959 to 2024.  In this visualization, the left bar represents median household income and the flows show estimated spending by category in the selected year. You can use the scroll bar or hit play/pause to cycle through the years and see the changes in the income/household expenses. Overall, there is a general upwards trend in the median income and the spendings for each of the categories every subsequent year. In the earlier years, food tended to be the number one household expense however in 1984, housing started to overtake food for most spendings.
+        </p>
+        <p>
+          Just a year later insurance would overtake housing and would continue to be the highest household expense to this day. At the same time, the other category would slowly overtake housing and food as well, becoming the second greatest household expense. This category would include various expenses such as student loans, credit card debt, and even subscriptions. As we get into the more modern years, these became the things that take big chunks out of the household expenses, while food and housing (which are two needs for survival) are taking up less than those.
+        </p>
+        <p>
+          Another interesting example can be seen with recreation. While not as big of a category, recreation usually takes up more of the median family income in the more modern years when it was beaten out by clothing and furniture back in the 1900s. The modernization of the US has led to more expenses going to organizations rather than essentials for survival, which is a little concerning. If this trend continues, insurance and other expenses are going to eat enormous chucks out of income, leading to families having to spend less on other essential needs.
         </p>
         <div class="viz-embed">
           <iframe src="animated_sankey.html" title="Animated Sankey: Income to spending"></iframe>
