--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
       <section class="viz-section" id="inequality">
         <h3>Income distribution across percentile groups</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Each stacked bar shows the share of total income
-          captured by broad percentile groups, allowing you to compare inequality across decade years.
+          This figure illustrated the breakdown of wealth in the United States over time. Each color represents a portion of the population, denoted by their percentile when sorted by income. The bars are representative of all of the income earned in the country throughout that year, with each "class" being assigned a section proportional to their share of this income. You can hover over each bar segment to display the exact portion of total income it represents.
+        </p>
+        <p>
+          We can see that over time, the portion of income being received by the top 10% of the population is increasing gradually while the bottom 50% decreases. In addition, we can see that the top 0.1% represent around 1-1.5% of the total income (10-15x overrepresented) while the bottom 50% represent only around 20% of the total income (2.5x underrepresented).
         </p>
         <div class="viz-embed">
           <iframe src="income_dist_ipums.html" title="Income shares by percentile group"></iframe>
