--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
       <div class="preamble" role="article">
         <h3>How to use this page:</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Use the sidebar to jump between
-          sections. For interactive charts, hover for details and use the controls to change the year or play
-          through time.
+          This webpage can be navigated to each individual visualization by using the links on the side bar to the right, or by scrolling. Various visualizations are interactable, and can be hovered over or have buttons on them that can be pressed to look at data in a different way.
         </p>
       </div>
     </section>
