--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
       <section class="viz-section" id="ranks">
         <h3>How spending ranks shift over time</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. This “ranked lines” view emphasizes relative
-          position: categories move up/down as their share of spending changes across decades.
+          This bump plot ranks major household expenditure categories by their share of median family income from 1960 to 2020, with a rank of 1 indicating the largest share. The visualization focuses on relative importance, showing how spending priorities have shifted over time.
+        </p>
+        <p>
+          Housing appears to stay at the top throughout the years. Insurance-related costs rise sharply in rank beginning around 1990, overtaking several traditional spending categories. Conversely, food shows the largest decline, also beginning around 1990. Categories such as child care, furniture, and education remain lower-ranked throughout the period. These shifts suggest that a growing portion of household income is devoted to fixed or essential costs, leaving less financial flexibility for discretionary spending. This is an important factor in understanding the modern affordability crisis.
         </p>
         <div class="viz-embed">
           <iframe src="bump_plot.html" title="Bump plot: ranked categories over time"></iframe>
@@ -150,9 +152,16 @@
       <section class="viz-section" id="methods">
         <h3>Conclusions</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Add notes here about data sources, definitions
-          (nominal vs real dollars, CPI adjustments), and any category-mapping assumptions used to construct the
-          spending breakdown.
+          Through our research of the data, we can conclude that yes, affordability is becoming way worse than it was back then. The main issues in modern affordability lie on two fronts. 
+        </p>
+        <p>
+          The first is the wage side. In terms of wages from the 1950s, there was obviously a gap between the upper wage groups and the lower wage groups. But in recent times, that gap has become so gigantic, with top 0.1% wages skyrocketing and little change in the wages of the average or bottom wage groups. This disparity shows that wealth isn’t really moving down to the groups that need it in the modern era, which means that they are very likely making ends meet.
+        </p>
+        <p>
+          Then there’s the second side, which is the prices of goods/services over time. The first point wouldn’t be much of an issue if prices of items stayed the same since the 1950s, but they have not. Surprisingly, things such as food haven’t been impacted as much, even though it is an essential item for human survival. When compared to other goods/services, what people are really forking over their money for things like insurance, student loans, subscriptions, or credit card debt. The prices of these have all been steadily increasing in the modern times. With the not very great increase in wages, these nonessentials are draining money from families that are in not great positions, and forcing them further into debt.
+        </p>
+        <p>
+          If we want to solve the affordability crisis, we have to do something about the wage gap, or lower the prices of unavoidable non essentials. Even by fixing just one of these could lift some weights on the shoulders of the average U.S. family. But if both keep rising at their current rates, we’re going to be seeing a severe poverty crisis in the U.S. soon.
         </p>
       </section>
 
