--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <li><a href="#inequality">Income Percentiles (Stacked Bar)</a></li>
             <li><a href="#food-cpi">Grocery Prices (Line Plot)</a></li>
             <li><a href="#inflation">Inflation Trends (Line & Bar)</a></li>
-            <li><a href="#tableau">Avg. Incomes by Class (Tableau)</a></li>
+            <li><a href="#tableau-dashboard">Avg. Incomes by Class (Tableau)</a></li>
             <li><a href="#methods">Conclusions</a></li>
             <li><a href="#bibliography">Bibliography</a></li>
           </ul>
